@@ -2,12 +2,6 @@
 TODO
 ----
 
-* Session operations only operate on one chroot.
-  Check only one is set.
-  creation: 1 chroot
-  run: any session chroot
-  end: any session chroot
-
 * Document the setup and session scripts.
   Include all scripts and ordering.
 
