@@ -1,3 +1,8 @@
+2005-10-30  Roger Leigh  <rleigh@debian.org>
+
+	* schroot/schroot.c (main): Abort if more than one chroot is
+	specified when starting a session.
+
 2005-10-28  Roger Leigh  <rleigh@debian.org>
 
 	* schroot/schroot.c
